--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -28,7 +28,7 @@ add_library( # Sets the name of the library.
         SHARED
 
         # Provides a relative path to your source file(s).
-        audioVisualization.c
+        audioVisualization.cpp
         audioVisualization.h)
 
 # Searches for a specified prebuilt library and stores the path as a
